patched e52eabe9c0eb47b436e873ad7cb83fe737164dec